--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "mysql2-db": "0.0.4",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
