--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -18,8 +19,5 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
-  },
-  "scripts": {
-    "test": "mocha"
   }
 }
