--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "forever": "^0.15.3",
     "moment": "^2.19.2",
     "morgan": "~1.9.0",
     "mysql2-db": "0.0.4",
